增加API的彈性
